--- a/style.css
+++ b/style.css
@@ -25,6 +25,20 @@ a{
     color: white;
 }
 /* MAIN */
+.form{
+font-family: Arial, Helvetica, sans-serif;
+    border-color: blue;
+    background-color: black;
+    color: white;
+    width: 800px;
+    text-align: center;
+ margin-left: 270px;
+ border-style: dashed;
+ border-color: white;
+ margin-bottom: 20px;
+ margin-top: 10px;
+}
+
 main{
     text-align: center;
    background-image: url(fondomain.jpeg.jpeg);
