--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ a{
     color: white;
 }
 /* MAIN */
+.horarios{
+     background-color: white;
+     margin-left: 540px;
+}
 .form{
 font-family: Arial, Helvetica, sans-serif;
     border-color: blue;
